add enable-native-access to application